<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vistula.mn.nowa.Oblicz_MN_46481">

    <EditText
        android:id="@+id/drugaA"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOblicz" />

    <EditText
        android:id="@+id/drugaImag"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/drugaA"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOblicz" />

    <EditText
        android:id="@+id/pierwszaImag"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/pierwszaA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:text="@string/textView1"
        android:textColor="#050505"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonObliczBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="47dp"
        android:text="@string/buttonPhotoBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/pierwszaA"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerOblicz"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pierwszaImag" />

    <Button
        android:id="@+id/buttonOblicz"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="122dp"
        android:text="@string/buttonOblicz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drugaA" />

    <TextView
        android:id="@+id/textViewImaginary1"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewImaginary1"
        app:layout_constraintStart_toEndOf="@+id/pierwszaImag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewImaginary2"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="74dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewImaginary1"
        app:layout_constraintStart_toEndOf="@+id/drugaImag"
        app:layout_constraintTop_toBottomOf="@+id/textViewImaginary1" />

    <TextView
        android:id="@+id/textViewWynik"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="125dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewWynik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOblicz" />

</androidx.constraintlayout.widget.ConstraintLayout>
