<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vistula.mn.nowa.Photo_MN_46481">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:text="@string/textView1"
        android:textColor="#050505"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagePhoto"
        android:layout_width="325dp"
        android:layout_height="273dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <EditText
        android:id="@+id/editPhotoText"
        android:layout_width="270dp"
        android:layout_height="51dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePhoto" />

    <TextView
        android:id="@+id/textPhotoSave"
        android:layout_width="146dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhotoText" />

    <TextView
        android:id="@+id/textPhotoLoad"
        android:layout_width="146dp"
        android:layout_height="33dp"
        android:layout_marginEnd="45dp"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/textPhotoSave"
        app:layout_constraintTop_toBottomOf="@+id/editPhotoText" />

    <Button
        android:id="@+id/buttonSavePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:onClick="savePhotoIn"
        android:text="@string/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhotoSave" />

    <Button
        android:id="@+id/buttonLoadPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:onClick="loadPhotoOut"
        android:text="@string/wczytajButton"
        app:layout_constraintStart_toEndOf="@+id/buttonSavePhoto"
        app:layout_constraintTop_toBottomOf="@+id/textPhotoSave" />

    <Button
        android:id="@+id/buttonPhotoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="@string/buttonPhotoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/buttonLoadPhoto"
        app:layout_constraintTop_toBottomOf="@+id/textPhotoLoad" />

</androidx.constraintlayout.widget.ConstraintLayout>
